extend endpoint to submit building upgrades
